--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   equatable: ^2.0.3
   freezed_annotation: ^1.0.0
   provider: ^6.0.1
+  flutter_bloc: ^8.1.1
 
 dev_dependencies:
   flutter_test:
