--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   freezed_annotation: ^1.0.0
   provider: ^6.0.1
   flutter_bloc: ^8.1.1
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
