--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   provider: ^6.0.1
   flutter_bloc: ^8.1.1
   get_it: ^7.2.0
+  flutter_inappwebview: ^5.4.3+7
 
 dev_dependencies:
   flutter_test:
