--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   get_it: ^7.2.0
   flutter_inappwebview: ^5.4.3+7
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
