--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,15 +24,18 @@ dependencies:
   flutter_inappwebview: ^5.4.3+7
   shared_preferences: ^2.0.15
   flutter_svg: ^1.1.5
+  
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  mockito: 5.2.0
   flutter_lints: ^1.0.0
   build_runner: ^2.1.5
   json_serializable: ^6.0.1
   freezed: ^1.0.0
+  test: ^1.21.1
 
 flutter:
   uses-material-design: true
