--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -21,7 +21,7 @@ jobs:
         working-directory: ./
       - run: |
           # 2. change path to [existed lib/main.dart path]/build/web
-          cd /Users/hanna/Desktop/sample_application/build/web
+          cd ./build/web
           git init
            # 3. change your email
           git config --global user.email hanna0926@coway.com
