--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -29,7 +29,7 @@ jobs:
           git config --global user.name cw-hanna
           git status
           # 5. change your repository
-          git remote add origin https://github.com/cw-hanna/flutter_clean_architecture_sample
+          git remote add origin https://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@github.com/cw-hanna/flutter_clean_architecture_sample.git
           git checkout -b gh-pages
           git add --all
           git commit -m "update"
